[package]
name = "rust-socket-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
eframe = "0.22.0"
egui = "0.22.0"
futures-util = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
tungstenite = "0.20.0"
url = "2.4.0"
